--- a/css/master.css
+++ b/css/master.css
@@ -15,7 +15,9 @@
   }
 
   body {
-    background-color:  beige;
+    /*background-color:  beige;*/
+    
+    background-image : url("images/code-wallpaper-6.png");
     color : black;
     font-family: Arial,Helvetica,sans-serif;
     /* set the background color here */
