--- a/css/master.css
+++ b/css/master.css
@@ -17,7 +17,7 @@
   body {
     /*background-color:  beige;*/
     
-    background-image : url("images/code-wallpaper-6.png");
+    background-image : url("https://wonderfulengineering.com/wp-content/uploads/2014/04/code-wallpaper-6.png");
     color : black;
     font-family: Arial,Helvetica,sans-serif;
     /* set the background color here */
