--- a/css/master.css
+++ b/css/master.css
@@ -36,6 +36,7 @@
   h1 {
     margin-bottom: 0.5rem;
     margin-top: 3rem;
+    color: white
    }
 
   h2 {
@@ -64,6 +65,10 @@
   hr {
     margin-bottom: 1rem;
     margin-top: 1rem;
+  }
+
+  p {
+    color : #F0F8FF;
   }
 
   /* this controls how the bullet points in the resume page looks */
